feat: using generated types improvements
